--- a/Thesis.bib
+++ b/Thesis.bib
@@ -991,7 +991,75 @@ author = "D Buskulic et. al"
       primaryClass   = "hep-lat",
       reportNumber   = "FERMILAB-PUB-15-107-T",
      SLACcitation   = "%%CITATION = ARXIV:1503.07237;%%"
-												
+
+
+@article{Bigi:2016mdz,
+      author         = "Bigi, Dante and Gambino, Paolo",
+            title          = "{Revisiting $B\to D \ell \nu$}",
+	          journal        = "Phys. Rev.",
+		        volume         = "D94",
+			      year           = "2016",
+			            number         = "9",
+				          pages          = "094008",
+					        doi            = "10.1103/PhysRevD.94.094008",
+						      eprint         = "1606.08030",
+						            archivePrefix  = "arXiv",
+							          primaryClass   = "hep-ph",
+								        SLACcitation   = "%%CITATION = ARXIV:1606.08030;%%"
+									}
+									
+
+@article{Bernlochner:2017jka,
+      author         = "Bernlochner, Florian U. and Ligeti, Zoltan and Papucci,
+                        Michele and Robinson, Dean J.",
+			      title          = "{Combined analysis of semileptonic $B$ decays to $D$ and
+                        $D^*$: $R(D^{(*)})$, $|V_{cb}|$, and new physics}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D95",
+				          year           = "2017",
+					        number         = "11",
+						      pages          = "115008",
+						            doi            = "10.1103/PhysRevD.95.115008, 10.1103/PhysRevD.97.059902",
+							          note           = "[erratum: Phys. Rev.D97,no.5,059902(2018)]",
+								        eprint         = "1703.05330",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-ph",
+										          SLACcitation   = "%%CITATION = ARXIV:1703.05330;%%"
+											  }
+
+
+@article{Jaiswal:2017rve,
+      author         = "Jaiswal, Sneha and Nandi, Soumitra and Patra, Sunando
+                        Kumar",
+			      title          = "{Extraction of $|V_{cb}|$ from $B\to D^{(*)}\ell\nu_\ell$
+                        and the Standard Model predictions of $R(D^{(*)})$}",
+      journal        = "JHEP",
+      volume         = "12",
+      year           = "2017",
+      pages          = "060",
+      doi            = "10.1007/JHEP12(2017)060",
+      eprint         = "1707.09977",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1707.09977;%%"
+      }
+
+@article{Bigi:2017jbd,
+      author         = "Bigi, Dante and Gambino, Paolo and Schacht, Stefan",
+            title          = "{$R(D^*)$, $|V_{cb}|$, and the Heavy Quark Symmetry
+                        relations between form factors}",
+			      journal        = "JHEP",
+			            volume         = "11",
+				          year           = "2017",
+					        pages          = "061",
+						      doi            = "10.1007/JHEP11(2017)061",
+						            eprint         = "1707.09509",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      SLACcitation   = "%%CITATION = ARXIV:1707.09509;%%"
+									      }
+									      
+
 @article{Bigi:2017njr,
       author         = "Bigi, Dante and Gambino, Paolo and Schacht, Stefan",
       title          = "{A fresh look at the determination of $|V_{cb}|$ from
@@ -1247,6 +1315,24 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
       reportNumber   = "FERMILAB-CONF-06-155-T, FPCP06-324, FPCP-2006-027",
       SLACcitation   = "%%CITATION = HEP-PH/0606023;%%"
 									      }
+
+@article{Caprini:1997mu,
+      author         = "Caprini, Irinel and Lellouch, Laurent and Neubert,
+                        Matthias",
+			      title          = "{Dispersive bounds on the shape of anti-B ---> D(*)
+                        lepton anti-neutrino form-factors}",
+			      journal        = "Nucl. Phys.",
+			            volume         = "B530",
+				          year           = "1998",
+					        pages          = "153-181",
+						      doi            = "10.1016/S0550-3213(98)00350-2",
+						            eprint         = "hep-ph/9712417",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      reportNumber   = "CERN-TH-97-091, CPT-97-P3480",
+									            SLACcitation   = "%%CITATION = HEP-PH/9712417;%%"
+										    }
+										    
 
 @article{PhysRevD.79.013008,
   title = {Model-independent description of $B\ensuremath{\rightarrow}\ensuremath{\pi}l\ensuremath{\nu}$ decays and a determination of $|{V}_{ub}|$},
@@ -3039,6 +3125,27 @@ abstract = "We present a new method for the numerical simulation of lattice fiel
 							          primaryClass   = "hep-lat",
 								        SLACcitation   = "%%CITATION = ARXIV:1004.0342;%%"
 									}
+
+@article{Chakraborty:2016mwy,
+      author         = "Chakraborty, Bipasha and Davies, C. T. H. and de
+                        Oliviera, P. G. and Koponen, J. and Lepage, G. P. and Van
+                        de Water, R. S.",
+			      title          = "{The hadronic vacuum polarization contribution to
+                        $a_{\mu}$ from full lattice QCD}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D96",
+				          year           = "2017",
+					        number         = "3",
+						      pages          = "034516",
+						            doi            = "10.1103/PhysRevD.96.034516",
+							          eprint         = "1601.03071",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            reportNumber   = "FERMILAB-PUB-17-296-T",
+										          SLACcitation   = "%%CITATION = ARXIV:1601.03071;%%"
+											  }
+											  
+
 
 
 @article{Chakraborty:2014aca,
@@ -5464,6 +5571,12 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
       primaryClass   = "hep-lat",
       reportNumber   = "CLNS-92-1136, OHSTPY-HEP-T-92-001",
       SLACcitation   = "%%CITATION = HEP-LAT/9205007;%%"
+}
+
+@misc{mcneile:private,
+author="C. McNeile",
+howpublished="private communication",
+year="2015"
 }
 
 @article{Dowdall:2013rya,
