--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -71,13 +71,25 @@ All results and figures presented in these chapters are my own, except for figur
 
     update all results
 
-    $S^{(1)}$ radiative correction!!!
+    past tense
+
+    -ize is valid everywhere, -ise is only in the uk...
+
+    capitalize only proper nouns in titles
+
+    mention how heavy-hisq avoids signal degredation on two fronts - light $b$ and short $q^2$ ranges!
+
+    colons before equations
+
+    short sentences
+
+    get vectorized versions of $RD/RD*$ and $alpha_s(Q)$ plots, get permission to use...
 
     nrqcd: emphasize that normalization problems mostly as you move away from zero recoil, zero momentum normalizations are basically fine...
-    
-    tadpole improvement?
 
-    Luke's theorem bit needs to be tighter, specifically why you get specific $h_{A_1},h_+$ expressions.
+    Stuff to refresh before viva:
+    - Luke's theorem
+    - CG algorithm
 
 }}
 
