--- a/Thesis.tex
+++ b/Thesis.tex
@@ -8,7 +8,13 @@
 
 \section*{Acknowledgments}
 
-I claim sole credit for everything in this thesis.
+I would like to thank my supervisor, Christine Davies, for her guidance and patience as I stumbled through this PhD making every possible mistake along the way. 
+
+I also owe a debt of gratitude to Brian Colquhoun and Andrew Lytle, who's advice and support in the opening stages of my time in Glasgow were indispensible. Without you I surely would have perished. You are top humans.
+
+I would also like to thank Jonna Koponen, Chris Bouchard, and Javad Komijani for an array of very useful conversations. I hope the Lattice [continues to] treat you well.
+
+It also seems traditional to acknowledge the other students in the group, for like friendship or something. They were ok I guess. 
 
 \newpage
 
