Physics is not my friend

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1758,6 +1758,23 @@ SLACcitation   = "%%CITATION = ARXIV:1212.4768;%%"
       SLACcitation   = "%%CITATION = HEP-LAT/0110175;%%"
 }
 
+@article{Morningstar:1998yx,
+      author         = "Morningstar, Colin J. and Shigemitsu, J.",
+            title          = "{Perturbative matching of lattice and continuum heavy
+                        light currents with NRQCD heavy quarks}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D59",
+				          year           = "1999",
+					        pages          = "094504",
+						      doi            = "10.1103/PhysRevD.59.094504",
+						            eprint         = "hep-lat/9810047",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      reportNumber   = "UCSD-PTH-98-35, OHSTPY-HEP-T-98-016",
+									            SLACcitation   = "%%CITATION = HEP-LAT/9810047;%%"
+										    }
+										    
+
 @article{Morningstar:1997ep,
       author         = "Morningstar, Colin J. and Shigemitsu, J.",
       title          = "{One loop matching of lattice and continuum heavy light
@@ -3130,20 +3147,20 @@ abstract = "We present a new method for the numerical simulation of lattice fiel
       author         = "Chakraborty, Bipasha and Davies, C. T. H. and de
                         Oliviera, P. G. and Koponen, J. and Lepage, G. P. and Van
                         de Water, R. S.",
-			      title          = "{The hadronic vacuum polarization contribution to
-                        $a_{\mu}$ from full lattice QCD}",
-			      journal        = "Phys. Rev.",
-			            volume         = "D96",
-				          year           = "2017",
-					        number         = "3",
-						      pages          = "034516",
-						            doi            = "10.1103/PhysRevD.96.034516",
-							          eprint         = "1601.03071",
-								        archivePrefix  = "arXiv",
-									      primaryClass   = "hep-lat",
-									            reportNumber   = "FERMILAB-PUB-17-296-T",
-										          SLACcitation   = "%%CITATION = ARXIV:1601.03071;%%"
-											  }
+     title          = "{The hadronic vacuum polarization contribution to
+                      $a_{\mu}$ from full lattice QCD}",
+     journal        = "Phys. Rev.",
+     volume         = "D96",
+     year           = "2017",
+     number         = "3",
+     pages          = "034516",
+     doi            = "10.1103/PhysRevD.96.034516",
+     eprint         = "1601.03071",
+     archivePrefix  = "arXiv",
+     primaryClass   = "hep-lat",
+     reportNumber   = "FERMILAB-PUB-17-296-T",
+     SLACcitation   = "%%CITATION = ARXIV:1601.03071;%%"
+}
 											  
 
 
@@ -9283,4 +9300,18 @@ author = "Thomas Becher and Richard J. Hill",
 									      primaryClass   = "hep-lat",
 									            SLACcitation   = "%%CITATION = ARXIV:1211.6966;%%"
 										    }
-										    
+
+
+@article{CLOSE1984209,
+title = "The ratio $\Gamma(B\to Dl\nu)/\Gamma(B\to D^* l\nu)$ in the quark model",
+journal = "Physics Letters B",
+volume = "149",
+number = "1",
+pages = "209 - 212",
+year = "1984",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(84)91586-7",
+url = "http://www.sciencedirect.com/science/article/pii/0370269384915867",
+author = "F.E. Close and G.J. Gounaris and J.E. Paschalis",
+abstract = "Using the non-relativistic quark model and including perturbative QCD corrections to first non-trivial order, we find that exclusive semileptonic decays of bottom mesons satisfy 0.3 < Γ(B → Dℓν)/Γ(B → D∗ℓν) < 0.5. For charmed meson decays, no corresponding prediction can be made for the ratio Γ(D → Kℓν)/Γ(D → K∗ℓν) other than that K dominates over K∗, whereas for top decays B∗ dominates over B."
+}
