--- a/latticecalcs.tex
+++ b/latticecalcs.tex
@@ -197,7 +197,7 @@ Throughout this section we will keep the gauge field dependence of $M^{-1}$ and 
   \label{eq:Gconj}
   M^{-1}(y,x) = \phi_5(y)\phi_5(x) \Omega(y)\Omega^{\dagger}(x) g^{\dagger}(x,y),
 \end{align}
-where $\phi_5(x) = (-1)^{\sum_{\mu} x_{\mu}}$.
+where $\phi_5(x) = (-1)^{\sum_{\mu} x_{\mu}}/a$.
 
 \subsubsection{2-point Correlation Functions}
 
@@ -306,7 +306,7 @@ For example, consider the effect this has on the following operator
   \\
   = &\psi^{\dagger}(x)e^{-{\textbf{p}\cdot\textbf{x}}}U_{\mu}(x) e^{+{\textbf{p}\cdot(\textbf{x}}+a\hat{\mu})}\psi(x+a\hat{\mu})\,.
 \end{align}
-When computing a propagator $g_a(x,y)$, we add these phases to the gauge fields which have the effect of the flavour $a$ carrying the spacial momentum. This is how momentum is included in the work of this thesis.
+When computing a propagator $g_a(x,y)$, we add these phases to the gauge fields which have the effect of the flavour $a$ carrying the spacial momentum. This is how momentum is included in the work of this thesis. We report momentum twist in units of $\pi/N_x$, e.g., a twist of $\theta$ in the $k$ direction corresponds to a momentum of $ap_k = \pi\theta/N_k$.
 
 \section{Analysis of Correlation Functions}
 
