--- a/latticeqcd.tex
+++ b/latticeqcd.tex
@@ -516,6 +516,6 @@ Another symmanzik improvement is introduced in this context by multiplying the g
     
     Once the propagator for the 2-component non-relativistic $b$ quark has been found, it must be transformed back into a 4-component spinor. This is done by an inverse Fouldy-Wouthuysen transformation \cite{PhysRev.78.29}:
     \begin{align}
-      \psi(x) = e^{-{{\bf{\gamma}}\cdot{\bf{D}}\over 2m_b}}\binom{\psi_+(x)}{0}.
+      \psi(x) = e^{-{{\bf{\gamma}}\cdot{\bf{\nabla}}\over 2am_b}}\binom{\psi_+(x)}{0}.
       \label{eq:FoldyWoldy}
       \end{align}
