--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -55,7 +55,8 @@ All results and figures presented in these chapters are my own, except for figur
 
 \vspace*{\stretch{2}}
 \begin{center}
-  \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
+  %% \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
+  \emph{'Everything I know right now is probably wrong.'} - wdbm
 \end{center}
 \vspace{\stretch{3}}
 
