everything pretty much finalized except the last chapter is a big rough round the edges. will probably update some results there when the paper is finished.

--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -44,7 +44,7 @@
 \end{center}
 This thesis is my own work, except where explicit attribution to others is made. In particular chapter \ref{chap:BsDsstar} is based on the now published [{\red{not out yet!}}], and chapter \ref{chap:BsDs} is based on [{\red{not out yet!}}].
 
-All results and figures presented in these chapters are my own, except for figures \ref{fig:ckmpdg} and \ref{fig:alpha_s} which are courtesy of the Particle Data Group \cite{PhysRevD.98.030001}, fig. \ref{fig:ckmpdg} from the HFLAV collaboration \cite{HFLAV16}, fig. \ref{fig:McNeile} was produced by McNeile et. al \cite{McNeile:2012qf} .
+All results and figures presented in these chapters are my own, except for figures \ref{fig:ckmpdg} and \ref{fig:alpha_s} which are courtesy of the Particle Data Group \cite{PhysRevD.98.030001}, fig. \ref{fig:ckmpdg} from the HFLAV collaboration \cite{HFLAV16}, fig. \ref{fig:McNeile} was produced by McNeile et. al \cite{McNeile:2012qf}. I also quote results from an in-progress study \cite{Colquhoun:2016osw} in Eq. \eqref{eq:Andrews_numbers}.
     
 \noindent\rule[2pt]{\textwidth}{0.5pt}
 \end{vcenterpage}
@@ -59,41 +59,6 @@ All results and figures presented in these chapters are my own, except for figur
   \emph{'Everything I know right now is probably wrong.'} - wdbm
 \end{center}
 \vspace{\stretch{3}}
-
-{\red{TODO:
-
-    we$\to$ I
-
-    $\gamma_x \to \Omega(x)$
-
-    eq$\to$Eq., fig$\to$ Fig., etc.
-    
-    $E\,\, /\,\, aE$ consistency
-
-    update all results
-
-    past tense
-
-    -ize is valid everywhere, -ise is only in the uk...
-
-    capitalize only proper nouns in titles
-
-    mention how heavy-hisq avoids signal degredation on two fronts - light $b$ and short $q^2$ ranges!
-
-    colons before equations
-
-    short sentences
-
-    get vectorized versions of $RD/RD*$ and $alpha_s(Q)$ plots, get permission to use...
-
-    nrqcd: emphasize that normalization problems mostly as you move away from zero recoil, zero momentum normalizations are basically fine...
-
-    Stuff to refresh before viva:
-    - Luke's theorem
-    - CG algorithm
-
-}}
-
 
 \end{titlepage}
 \sloppy
